--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,700;1,200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles.css">
+    <link rel="shortcut icon" href="/ico.webp" type="image/x-icon">
     <title>XiomiauDev</title>
 </head>
 <body>
     <header>
+        <span>
+            <img src="/cat.webp" alt="gato durmiendo">
+            <p class="xiomiau">
+                Xiomiau
+            </p></span>
         <nav>
             <ul>
                 <li>
