--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,700;1,200&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@1,200;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles.css">
     <link rel="shortcut icon" href="/ico.webp" type="image/x-icon">
     <title>XiomiauDev</title>
@@ -15,7 +17,8 @@
             <img src="/cat.webp" alt="gato durmiendo">
             <p class="xiomiau">
                 Xiomiau
-            </p></span>
+            </p>
+        </span>
         <nav>
             <ul>
                 <li>
@@ -31,6 +34,13 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section>
+            <h3 id="my-name-is">
+                Mi nombre es Xiomara, estudio desarrollo web desde abril del 2022. Desde pequeña siempre me ha atraído la tecnología. Sin embargo, por diversos motivos hasta esa fecha mi camino se dirigió hacia aprender este maravilloso mundo. Estaba terminando el cuarto semestre de la carrera en Contaduría Pública pero no era lo que quería hacer toda mi vida. Durante las vacaiones de verano y con mucha emoción comencé a estudiar en Platzi, además de seguir  alimentando mi curiosidad con videos de Youtube e investigando en internet. Con mucho miedo decidí cambiar de carrera, y pedí el cambio a Ingeniería en Software. Actualmente soy trainee de desarrollo web en Zegnio, me hace feliz lo que hago y espero hacerlo el resto de mi vida. 
+            </h3>
+        </section>
+    </main>
     <script src="/main.js"></script>
 </body>
 </html>
